# zepl

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: app.rs  config.rs  game.rs  input_event.rs  lib.rs  runner.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: commands.rs  component.rs  entity.rs  handle.rs  lib.rs  resources.rs  scene.rs  world.rs
crates/ecs/src/systems/: commands.rs  graph.rs  mod.rs  schedule.rs  schedule_graph.rs  system.rs
crates/ecs/system/: Cargo.toml
crates/ecs/system/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/server/: Cargo.toml
crates/renderer/server/shaders/: shader.wgsl
crates/renderer/server/src/: adapter.rs  bid_storage.rs  device.rs  instance.rs  lib.rs  object.rs  query.rs  server.rs  surface.rs  vertex.rs
crates/renderer/src/: lib.rs  renderer.rs  texture.rs  transform.rs
crates/renderer/src/drawing/: entity.rs  mod.rs
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs  registry.rs  scene_loader.rs  serialization.rs  sprite.rs  texture.rs  transform2d.rs
examples/: .gitignore
examples/hello/: .gitignore  Cargo.toml  Zepl.project
examples/hello/entities/: player.entity
examples/hello/game/: Cargo.toml
examples/hello/game/entities/: player.entity
examples/hello/game/scenes/: main.scene
examples/hello/game/src/: lib.rs
examples/hello/scenes/: main.scene
examples/hello/src/: lib.rs  main.rs
src/: lib.rs
