[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecs = { path = "../ecs" }
scene = { path = "../scene" }

serde_yaml = "0.9.0"
libloading = "0.8.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]