[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "server"}
ecs = { path = "../ecs" }
scene = { path = "../scene" }

encase = "0.6"
bytemuck = "1.0"
image = "0.24"
wgpu = "0.18"
pollster = "0.3.0"

[dependencies.glfw]
version = "0.53"
features = ["vulkan"]