[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecs = { path = "../../ecs" }
scene = { path = "../../scene" }

wgpu = "0.18"
glam = "0.24.0"
encase = "0.6.1"

[dependencies.glfw]
version = "0.53"
features = ["vulkan"]

[dependencies.bytemuck]
version = "1.14"
features = ["derive"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
